# src/core/docs/swagger/eventos.yaml
@@ -1,5 +1,5 @@
 paths:
-  /api/eventos:
+  /api/events:
     get:
       tags: [Eventos]
       summary: Listar eventos (paginado)
@@ -56,7 +56,7 @@ paths:
         "400":
           description: Validation error
 
-  /api/eventos/{id}:
+  /api/events/{id}:
     put:
       tags: [Eventos]
       summary: Atualizar evento (Admin)
@@ -111,7 +111,7 @@ components:
         hora: { type: string, example: "20:00" }
         local: { type: string, example: "Arena Central" }
         preco: { type: string, example: "50.00" }
-        img: { type: string, example: "https://cdn.exemplo.com/eventos/1.jpg" }
+        img: { type: string, example: "https://cdn.exemplo.com/events/1.jpg" }
         desc: { type: string, example: "Descrição do evento..." }
         cidadeId: { type: integer, example: 1 }
 
